--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "babelify": "github:ylemkimon/babelify",
+    "compass": "^0.1.1",
     "dotenv": "^4.0.0",
     "es6-promise": "^4",
     "form-serialize": "^0.7.2",
